# EzzzRAG_bot

./: .env.example  .gitignore  README.md  app.py  architecture.md  config.py  db.py  docker-compose.prod.yml  docker-compose.yml  models.py  nginx.conf  rag.db  requirements.txt  schemas.py  setup.sh  start.py  test_rag.db  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  chatbots.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: auth.py  chat.py  chatbot.py  document.py
backend/app/services/: document_service.py  rag_service.py
backend/app/tasks/: __init__.py  document_tasks.py
src/: extract_text.py  model.py  rag.py
static/css/: style.css
templates/: chat.html  chatbot_detail.html  chatbot_new.html  chatbots.html  dashboard.html  index.html  login.html  register.html
templates/partials/: nav.html  sidebar.html
