[project]
name = "ragautomation-backend"
version = "0.1.0"
description = "RAG Automation SaaS Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "openai==1.12.0",
    "pinecone-client==3.0.0",
    "pdfplumber==0.11.0",
    "python-docx==1.1.0",
    "tiktoken==0.6.0",
    "celery==5.3.6",
    "flower==2.0.1",
    "prometheus-client==0.19.0",
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    "email-validator==2.1.0.post1",
    "authlib==1.2.1",
    "starlette==0.36.1",
    "python-slugify==8.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "faker==22.0.0",
    "black==23.12.1",
    "isort==5.13.2",
    "ruff==0.1.15",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "faker==22.0.0",
    "black==23.12.1",
    "isort==5.13.2",
    "ruff==0.1.15",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "T20"]
ignore = ["E501", "B008"]
per-file-ignores = {"tests/*": ["S101", "S106"]}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true